--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=${APP_NAME}
-server.port=${SERVER_PORT}
+server.port=80
+param.lucas.aplicacao=${APP_NAME}
 param.lucas.nome=${LUCAS_NOME}
 param.lucas.email=${LUCAS_EMAIL}
 param.lucas.idade=${LUCAS_IDADE}
