Config map, ajuste deploy e application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=Váriaveis de Ambiente
-server.port=80
-param.lucas.nome= Lucas Brenner Ferreira
-param.lucas.email= lucasbref82@gmail.com
-param.lucas.idade= 25
+spring.application.name=${APP_NAME}
+server.port=${SERVER_PORT}
+param.lucas.nome=${LUCAS_NOME}
+param.lucas.email=${LUCAS_EMAIL}
+param.lucas.idade=${LUCAS_IDADE}
