Ajuste container docker, e manifestos

--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -5,6 +5,6 @@ metadata:
 data:
   APP_NAME: "Váriaveis de ambiente"
   SERVER_PORT: "80"
-  LUCAS_NOME: "Lucas Brenner Ferreira"
-  LUCAS_EMAIL: "lucasbref82@gmail.com"
+  LUCAS_NOME: "Lucas Brenner Ferreira 4505242"
+  LUCAS_EMAIL: "lucasbref99@gmail.com"
   LUCAS_IDADE: "25"
