--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=80
-param.lucas.aplicacao=${APP_NAME}
-param.lucas.nome=${LUCAS_NOME}
-param.lucas.email=${LUCAS_EMAIL}
-param.lucas.idade=${LUCAS_IDADE}
+param.lucas.aplicacao=${APP_NAME:MinhaAplicacaoPadrao}
+param.lucas.nome=${LUCAS_NOME:Lucas Brenner Ferreira Padrao}
+param.lucas.email=${LUCAS_EMAIL:lucasbref82@gmail.com Padrao}
+param.lucas.idade=${LUCAS_IDADE:25 Padrao}
